tests/snapshots/tui_snapshot__nodes_view_with_quorum_and_stale_stats_badges.snap
---
source: tests/tui_snapshot.rs
assertion_line: 585
expression: dump
---
 Nodes  2 total

────────────────────────────────────────────────────────────────────────────────────────────────────
┌ Nodes ───────────────────────────────────────────────────────────────────────────────────────────┐
│   node          status   cpu            cpu usage  ram    ram usage  disk   uptime       guests  │
│●  pve1          online   12% (0.5/4)    █░░░░░░░   50%    ████░░░░   3%     1d 0h        0/0     │
│●  pve2          online   0% (0.0/4)     ░░░░░░░░   0%     ░░░░░░░░   3%     1d 0h        0/0     │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
