tests/snapshots/tui_snapshot__queue_view_empty_state.snap
---
source: tests/tui_snapshot.rs
expression: dump
---
┌ Operation Queue ─────────────────────────────────────────┐┌ Replay-as-Script ────────────────────┐
│ [j/k] Nav · [d] Remove · [C] Commit & Execute · [R] Refre││                                      │
└──────────────────────────────────────────────────────────┘│                                      │
┌──────────────────────────────────────────────────────────┐│                                      │
│Queue is empty. Press 's', 'S', 'r', 'd' in Guest List to ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
└──────────────────────────────────────────────────────────┘└──────────────────────────────────────┘
