tests/snapshots/tui_snapshot__search_view_empty_state.snap
---
source: tests/tui_snapshot.rs
assertion_line: 423
expression: dump
---




                    ┌ Instant Search (/ to filter, Enter to select) ───────────┐
                    │>                                                         │
                    └──────────────────────────────────────────────────────────┘
                    ┌──────────────────────────────────────────────────────────┐
                    │cmd   View: Dashboard                 action              │
                    │cmd   View: Nodes                     action              │
                    │cmd   View: Guests                    action              │
                    │cmd   View: Storage                   action              │
                    │cmd   View: Hotspot Heatmap           action              │
                    │cmd   View: Backup Health Board       action              │
                    │cmd   View: Audit Timeline            action              │
                    └──────────────────────────────────────────────────────────┘
