tests/snapshots/tui_snapshot__snaptree_view_empty_state.snap
---
source: tests/tui_snapshot.rs
assertion_line: 331
expression: dump
---
 snapshot tree: 100

 — ─────────────────────────────────────────────────────────────────────────────────────────────────
                                          No snapshot data
