tests/snapshots/tui_snapshot__ssh_session_connecting_placeholder.snap
---
source: tests/tui_snapshot.rs
assertion_line: 382
expression: dump
---
┌ ssh: vmid 100 (root@10.0.0.5) ───────────────────────────────────────────────┐
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                  Connecting…                                 │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└ Ctrl+] to exit ──────────────────────────────────────────────────────────────┘
