tests/snapshots/tui_snapshot__ssh_session_with_pty_content.snap
---
source: tests/tui_snapshot.rs
assertion_line: 422
expression: dump
---
┌ ssh: vmid 100 (root@10.0.0.5) ───────────────────────────────────────────────┐
│alpine:~# uname -a                                                            │
│Linux alpine 6.12.0-pve #1 SMP                                                │
│alpine:~#                                                                     │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└ Ctrl+] to exit ──────────────────────────────────────────────────────────────┘
