tests/snapshots/tui_snapshot__storage_view_empty_state.snap
---
source: tests/tui_snapshot.rs
expression: dump
---
 💾  Storage Pools  (0 total)

────────────────────────────────────────────────────────────────────────────────────────────────────
 ⏳  Loading storage...
