tests/snapshots/tui_snapshot__tasks_view_empty_state.snap
---
source: tests/tui_snapshot.rs
assertion_line: 470
expression: dump
---
 Live task log  upid UPID:test:0:0:0:0:0:0:0:

────────────────────────────────────────────────────────────────────────────────────────────────────
 waiting for logs…
