tests/snapshots/tui_snapshot__timeline_view_empty_state.snap
---
source: tests/tui_snapshot.rs
assertion_line: 358
expression: dump
---
 🕒  Audit Timeline │ Scrub through historical cluster state to find changes.

────────────────────────────────────────────────────────────────────────────────────────────────────
No data for this snapshot.
